--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-aria-components": "^1.6.0",
     "react-dom": "^19.0.0",
